# testOptixProject

./: .gitignore  CMakeLists.txt  readme.md
src/: SampleRenderer.cpp  main.cpp
